# ebpf-sensor

./: CLAUDE.md  README.md  bpf_to_file.py  bpf_to_kafka.py  event.py  policy.py  pyproject.toml  run_rxrpc_sensor.py
.github/workflows/: ci.yml
docs/: DESIGN.md
sinks/: kafka.py  record.py  sink.py
sources/: bpf.py  debug_bpf.py  ebpf.py  eventsource.py  predefined_programs.py  replay.py
tests/integration/: test_replay.py
tests/triggers/: README.md  rxrpc_trigger.c
tests/unit/: test_bpf_source.py  test_debug_bpf_source.py  test_ebpf_source.py  test_policy.py  test_predefined_programs.py  test_record_sink.py  test_replay.py
