[project]
name = "ebpf-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=9.0.3",
]

[tool.mypy]
strict = true
python_version = "3.12"
