[project]
name = "ebpf-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
